Ensure map doesn't overlap page break
Sometimes in the PDF rendering (which uses print CSS), the map would overlap a page break, causing the map to be split over 2 pages.

I've added `page-break-inside: avoid;` to the map which stops this happening! (new to me).

I have also put a wrapping container on the map and added padding to that, otherwise the map hugs the very top of the page.

--- a/app/javascript/stylesheets/decision_notice.scss
+++ b/app/javascript/stylesheets/decision_notice.scss
@@ -11,4 +11,12 @@
   dd {
     width: 60%;
   }
+
+  .map {
+    padding-top: 1em;
+  }
+}
+
+.map {
+  page-break-inside: avoid;
 }
